force-app/main/default/objects/AV_AzureTeamsToken__c/AV_AzureTeamsToken__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Azure Teams Token</label>
</CustomObject>