force-app/main/default/objects/AV_AzureTeamsToken__c/fields/AV_Token1__c.field-meta.xml
<CustomField>
    <fullName>AV_Token1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>