force-app/main/default/objects/AV_AzureTeamsToken__c/fields/AV_Token2__c.field-meta.xml
<CustomField>
    <fullName>AV_Token2__c</fullName>
    <description>Token2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>