force-app/main/default/objects/AV_AzureTeamsToken__c/fields/AV_Token4__c.field-meta.xml
<CustomField>
    <fullName>AV_Token4__c</fullName>
    <description>Token4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>